# bvd-data-analysis-skills

./: .gitignore  AGENTS.md  CONVENTIONS.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: release-skills.yml
skills/bvd-sex-age-analysis/: SKILL.md
skills/bvd-sex-age-analysis/.claude-plugin/: plugin.json
skills/bvd-sex-age-analysis/references/: data-dictionary.md  quality-gates.md
skills/bvd-sex-age-analysis/scripts/: generate_slides.py
skills/bvd-sitrep-review/: README.md  SKILL.md
skills/bvd-sitrep-review/.claude-plugin/: plugin.json
skills/bvd-sitrep-review/references/: enhancement.md  review.md
skills/bvd-sitrep-review/scripts/: make_figures.py
src/bvd_common/: __init__.py  palette.py  pptx.py  stats.py
tests/fixtures/: DHIS2_Tracker_Short_Line_List_20260610.xlsx
tools/: build_portable.py  package_skills.py
